--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <div id="display">
+            58008
+        </div>
+        <div id="keyboard">
+            <button id="all-clear">AC</button>
+            <button id="/">/</button>
+            <button id="*">*</button>
+            <button id="7">7</button>
+            <button id="8">8</button>
+            <button id="9">9</button>
+            <button id="-">-</button>
+            <button id="4">4</button>
+            <button id="5">5</button>
+            <button id="6">6</button>
+            <button id="+">+</button>
+            <button id="1">1</button>
+            <button id="2">2</button>
+            <button id="3">3</button>
+            <button id="=">=</button>
+            <button id="0">0</button>
+        </div>
         <script src="./javascript.js"></script>
     </body>
 </html>
