--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
         <div id="display"></div>
         <div id="keyboard">
             <button id="all-clear">AC</button>
-            <button id="/">/</button>
-            <button id="*">*</button>
+            <button id="/" class="operator">/</button>
+            <button id="*" class="operator">*</button>
             <button id="7" class="number">7</button>
             <button id="8" class="number">8</button>
             <button id="9" class="number">9</button>
-            <button id="-">-</button>
+            <button id="-" class="operator">-</button>
             <button id="4" class="number">4</button>
             <button id="5" class="number">5</button>
             <button id="6" class="number">6</button>
-            <button id="+">+</button>
+            <button id="+" class="operator">+</button>
             <button id="1" class="number">1</button>
             <button id="2" class="number">2</button>
             <button id="3" class="number">3</button>
-            <button id="=">=</button>
+            <button id="=" class="equals">=</button>
             <button id="0" class="number">0</button>
         </div>
         <script src="./javascript.js"></script>
