--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="1" class="number">1</button>
             <button id="2" class="number">2</button>
             <button id="3" class="number">3</button>
-            <button id="=" class="equals">=</button>
+            <button id="equals">=</button>
             <button id="0" class="number">0</button>
         </div>
         <script src="./javascript.js"></script>
