Add backspace function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <div id="display"></div>
             <div id="keyboard">
                 <button id="all-clear">AC</button>
+                <button id="backspace">←</button>
                 <button id="/" class="operator">/</button>
                 <button id="*" class="operator">*</button>
                 <button id="7" class="number">7</button>
